--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-color: #f3e6f8; /* Pastel Purple Background */
     margin: 0;
     padding: 0;
 }
 
 header {
-    background-color: #333;
+    background-color: #af8da2; /* Pastel Purple Header */
     color: #fff;
     text-align: center;
     padding: 20px;
@@ -16,21 +16,18 @@ h1 {
     font-size: 36px;
 }
 
-nav {
-    background-color: #444;
+.navbar {
+    text-align: center; /* Centered Navigation Bar */
+    background-color: #af8da2; /* Pastel Purple Background */
+    padding: 10px 0;
 }
 
-nav ul {
-    list-style: none;
-    padding: 0;
-}
-
-nav li {
+.navbar li {
     display: inline;
-    margin-right: 20px;
+    margin: 0 20px;
 }
 
-nav a {
+.navbar a {
     text-decoration: none;
     color: #fff;
     font-weight: bold;
@@ -47,6 +44,6 @@ nav a {
 footer {
     text-align: center;
     padding: 10px;
-    background-color: #333;
+    background-color: #af8da2; /* Pastel Purple Footer */
     color: #fff;
 }
