--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ footer {
 }
 
 .fixed-size-image {
-    width: 3000px; /* Set a fixed width for the images */
-    height: 4000px; /* Set a fixed height for the images */
+    width: 200px; /* Set a fixed width for the images */
+    height: auto; /* Set a fixed height for the images */
     object-fit: cover; /* Maintain the aspect ratio and cover the container */
 }
