--- a/styles.css
+++ b/styles.css
@@ -68,8 +68,19 @@ footer {
     padding: 20px; /* Add padding inside each section */
 }
 
-.fixed-size-image {
-    width: 200px; /* Set a fixed width for the images */
-    height: auto; /* Set a fixed height for the images */
-    object-fit: cover; /* Maintain the aspect ratio and cover the container */
+.aspect-ratio-4-3 {
+    position: relative;
+    padding-bottom: 75%; /* 4:3 aspect ratio */
+    overflow: hidden;
+}
+
+.centered-cropped-image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
 }
