--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-    background-color: #af8da2; /* Pastel Purple Header */
+    background-color: #9B73A3; /* Pastel Purple Header */
     color: #fff;
     text-align: center;
     padding: 20px;
@@ -18,7 +18,7 @@ h1 {
 
 .navbar {
     text-align: center; /* Centered Navigation Bar */
-    background-color: #af8da2; /* Pastel Purple Background */
+    background-color: #9B73A3; /* Pastel Purple Background */
     padding: 10px 0;
 }
 
@@ -44,7 +44,7 @@ h1 {
 footer {
     text-align: center;
     padding: 10px;
-    background-color: #af8da2; /* Pastel Purple Footer */
+    background-color: #9B73A3; /* Pastel Purple Footer */
     color: #fff;
 }
 
