--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ h1 {
     display: flex;
     justify-content: space-around; /* Distribute items evenly */
     align-items: center; /* Center items vertically */
-    /* text-align: center; /* Centered Navigation Bar */
+    text-align: center; /* Centered Navigation Bar */
     background-color: #9B73A3; /* Pastel Purple Background */
     padding: 10px 0;
 }
