--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Comfortaa', sans-serif;
+    font-family: 'Noto Sans', sans-serif;
     background-color: #f3e6f8; /* Pastel Purple Background */
     margin: 0;
     padding: 0;
@@ -15,6 +15,10 @@ header {
 h1 {
     font-size: 36px;
     font-weight: 700;
+}
+
+p {
+    line-height: 1.6;
 }
 
 .navbar {
@@ -59,8 +63,30 @@ footer {
 }
 
 .image-container img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     max-width: 48%; /* Set the maximum width of each image */
     height: auto; /* Maintain the aspect ratio */
+}
+
+.content-container {
+    /* display: flex; */
+    /* flex-wrap: wrap; Allows wrapping of items */
+    justify-content: center; /* Adjusts spacing between items */
+    align-items: center; /* Centers items vertically within the container */
+    overflow: hidden;
+}
+
+.content-container img {
+    max-width: 40%;
+    height: auto;
+    float: left;
+    margin-right: 20px;
+}
+
+.content-container p {
+    margin: 0px;
 }
 
 .centered-heading {
@@ -68,7 +94,6 @@ footer {
 }
 
 .section {
-    margin-bottom: 20px; /* Add space at the bottom of each section */
     padding: 20px; /* Add padding inside each section */
 }
 
@@ -105,4 +130,31 @@ footer {
 .logo-button img {
     width: 40px;
     height: 40px;
+}
+
+@media (max-width: 450px) {
+    .content-container {
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+        align-items: center;
+    }
+
+    .content-container img {
+        max-width: 70%;
+        height: auto;
+        float: left;
+        margin-right: 0px;
+    }
+
+    .image-container {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        row-gap: 10px;
+    }
+
+    .image-container img {
+        max-width: 100%;
+    }
 }
